[PE] Create ScopedPaintState in TableRowPainter::PaintCollapsedBorders()

In order to handle paint offset translation.

TBR=wangxianzhu@chromium.org

(cherry picked from commit c73113be2fc4f632897bb11103e06c7c06a6206e [formerly ce3f8e667dbdd9d350e6527aad5c99024d3ad2c3])

Bug: 889463
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Iee36b15e2b823057af66298d2d13727cce12da06
Reviewed-on: https://chromium-review.googlesource.com/1246957
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594498}
Reviewed-on: https://chromium-review.googlesource.com/1252142
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#737}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: e325cf6cc7e15c44f5904d2e7506f05cfb6e15cb